# monteur-ia

./: .gitignore  README.md  backend_entry.py  pyproject.toml
desktop/backend-dist/: README.md
desktop/electron-shell/: main.js  package-lock.json  package.json  preload.js  renderer.html
docs/: architecture-technique-detaillee.md  production-readiness.md  single-exe-runtime.md  windows-build.md
src/ai_service/: __init__.py  main.py
src/ai_service/core/: config.py  logging_utils.py  security.py
src/ai_service/models/: schemas.py
src/ai_service/repositories/: sqlite_repo.py
src/ai_service/services/: cloud.py  ffmpeg_pipeline.py  hooks.py  silence.py  transcription.py  viral.py  whisper.py
tests/: test_services.py
